make "show scoring details" keyboard navigable. fixes #10395
on student grades page, the "show scoring details" button and
its tooltip weren't keyboard navigable. they are now accessible,
and the user is alerted to the new row through aria attributes.

test plan:
  * using voiceover or another screen reader, navigate to the
    student grades page within a course;
  * tab to a "show scoring details" link and verify that it is
    properly read;
  * click the link, and verify that you are notified of the new
    table now and that tabbing to the new row reads its
    contents.

Change-Id: I520165503984fe296c9f4097e6b1260ac3d6ac70
Reviewed-on: https://gerrit.instructure.com/13485
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Bryan Madsen <bryan@instructure.com>

--- a/app/stylesheets/grade_summary.sass
+++ b/app/stylesheets/grade_summary.sass
@@ -113,7 +113,7 @@
   :position relative
   :z-index 10
   :outline none
-  &:hover
+  &:hover, &:focus
     :text-decoration none
     .tooltip_wrap, .tooltip_text
       :visibility visible
