notify users when stream items (e.g. comments) are added.
fixes #9235

previously, users with screen readers were not notified when a
comment was successfully posted on the dashboard. now, the dashboard
is a live stream so anything that updates it is read to the user as
it becomes available.

test plan:
  * using voiceover or another screen reader, navigate to the
    dashboard and post a comment on a stream item;
  * verify that once the comment is posted, it is read back by the
    screen reader.

Change-Id: I68d560fc8e879098c48a2f130327278f2381e867
Reviewed-on: https://gerrit.instructure.com/13497
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Bryan Madsen <bryan@instructure.com>

--- a/app/views/shared/_recent_messages.html.erb
+++ b/app/views/shared/_recent_messages.html.erb
@@ -1,7 +1,7 @@
 <% show_limit ||= 15; conferences ||= []; show_context ||= false; recent_messages ||= [] %>
 <h2><%= t 'headings.recent_activity', 'Recent Activity' %></h2>
 <div class="clear"></div>
-<div id="topic_list" class="recent_messages_list <%= 'recent_messages_show_context' if show_context %>">
+<div id="topic_list" aria-live="polite" class="recent_messages_list <%= 'recent_messages_show_context' if show_context %>">
   <%= render :partial => 'users/ie7_upgrade' %>
   <%= render :partial => 'users/account_notification', :collection => @announcements %>
   <%= render :partial => 'users/cc_prefs', :locals => {:message_count => recent_messages.length} %>
