--- a/app/stylesheets/_variables.sass
+++ b/app/stylesheets/_variables.sass
@@ -53,5 +53,5 @@ $silver-gradient-top: #ededed
 $silver-gradient-bottom: #c4c4c4
 
 
-$help-link-color: #ffa500
+$help-link-color: #fff
 $masquerade-link-color: #ffa500
