fix i18n js issues, fixes #10456
ensure that translations don't get overridden due to the locale being in
the translation hash twice (symbol and string)

also ensure _core translations (date/time/number formats) are always
included

test plan:
1. use canvas w/ optimized js
2. switch to another language (e.g. spanish)
3. go to the web conferences page
4. click to delete a conference
5. the confirmation dialog should be translated

Change-Id: I73cb94a34a4acc2fe80b01148b950240bbd26d94
Reviewed-on: https://gerrit.instructure.com/13580
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Mark Ericksen <marke@instructure.com>

--- a/config/build.js.erb
+++ b/config/build.js.erb
@@ -86,7 +86,7 @@
       ]
     },
 
-    { name: "common" },
+    { name: "common", include: ['translations/_core'] },
 
     // "apps"
     <%= app_bundles %>
