--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -157,7 +157,7 @@
       <div id="not_right_side">
         <div id="content-wrapper">
           <%= render_crumbs %>
-          <div id="content" role="main" tabindex="-1">
+          <div id="content" role="main">
             <%= yield %>
           </div>
         </div>
