sort users on course people page by sortable_name.
fixes #10347, #10440

this commit also replaces the display of login_id with the
user's email address.

test plan:
  * create a course with users;
  * navigate to courses/:id/users and verify that students and
    teachers/tas are being sorted by sortable_name;
  * make some test calls to /api/v1/courses/:id/users and verify
    that it continues to work as expected.
  * confirm that user's email address is displayed instead of their
    login_id.

Change-Id: Id67557d98e8e2c0c42402ee64528e1f27c91b78c
Reviewed-on: https://gerrit.instructure.com/13592
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/views/jst/courses/RosterUser.handlebars
+++ b/app/views/jst/courses/RosterUser.handlebars
@@ -4,12 +4,12 @@
   </a>
 
   <div class="user-details">
-    <a class="user_name" href="/courses/{{course_id}}/users/{{user_id}}">{{name}}</a>
+    <a class="user_name" href="/courses/{{course_id}}/users/{{id}}">{{name}}</a>
     <div class="more_info">
       <div class="short_name">{{short_name}}</div>
-      <div class="email">{{login_id}}</div>
+      <div class="email">{{email}}</div>
       <ul class="sections">
-        {{#each course_section_name}}
+        {{#each sectionNames}}
           <li class="section">{{this}}</li>
         {{/each}}
       </ul>
