--- a/app/stylesheets/base/_#header.sass
+++ b/app/stylesheets/base/_#header.sass
@@ -176,7 +176,8 @@
       min-width: 270px
       width: 270px
       vertical-align: top
-      h2
+      .h2
+        display: block
         padding: 9px 12px 3px
         border-bottom: 1px solid lighten($borderColor, 22%)
         color: $menu-text-color
