--- a/app/views/files/full_index.html.erb
+++ b/app/views/files/full_index.html.erb
@@ -24,32 +24,32 @@
     <div id="file_uploads_progress" style="display: none; position: absolute; right: 5px; background-color: #eee; z-index: 2; border: 1px solid #aaa; border-top-width: 0; padding: 2px 5px;">
       <a href="#" id="file_uploads_dialog_link"><%= t 'messages.uploading', "Uploading 5 Files..." %></a>
     </div>
-    <ul id="files_structure_list">
+    <ul id="files_structure_list" role="tree" aria-label="<%= t('file_list', 'File list') %>" aria-live="polite">
       <li id="swfupload_holder">
         <div id="file_swf"></div>
       </li>
       <% @contexts.each do |context| %>
         <% root_folder = Folder.root_folders(context).first %>
-        <li class="context folder folder_<%= root_folder.id %> <%= context.asset_string %>" style="display: none;">
-          <span class="text name"><%= context.name %></span>
+        <li id="folder_<%= root_folder.id %>" class="context folder folder_<%= root_folder.id %> <%= context.asset_string %>" style="display: none;" role="treeitem" tabindex="0" aria-expanded="true">
+          <span class="text name" role="link" aria-controls="folder_<%= root_folder.id %> "><%= context.name %></span>
           <span class="text id" style="display: none;"><%= root_folder.id %></span>
           <ul>
           </ul>
         </li>
       <% end %>
-      <li class="file file_blank" style="display: none;">
+      <li class="file file_blank" style="display: none;" role="treeitem" tabindex="0">
         <span class="id" style="display: none;">&nbsp;</span>
-        <span class="text name">&nbsp;</span>
+        <span class="text name" role="link">&nbsp;</span>
       </li>
-      <li class="folder_blank" style="display: none;">
+      <li class="folder_blank" style="display: none;" role="treeitem" tabindex="0" aria-expanded="false">
         <span class="id" style="display: none;">&nbsp;</span>
-        <span class="text name">&nbsp;</span>
+        <span class="text name" role="link">&nbsp;</span>
         <ul>
         </ul>
       </li>
     </ul>
   </div>
-  <ul id="files_content" class="files_content">
+  <ul id="files_content" class="files_content" aria-label="<%= t('file_details', 'File details') %>">
   </ul>
 </div>
 <% unless showing_all_contexts %>
