show drag/edit/delete links to screen reader users.
fixes #9278

when navigating the modules and assignments pages with
a screen reader, display the on-hover links and actions to the user.

test plan:
* using a screen reader, navigate to a course modules page and the
course assignments page;
* navigate each page and verify that the move, edit, and
delete links are read as expected.

Change-Id: Ib8a4b3770fc155169675c147f982bd508a5d1d03
Reviewed-on: https://gerrit.instructure.com/13514
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/stylesheets/g_assignments.sass
+++ b/app/stylesheets/g_assignments.sass
@@ -127,7 +127,11 @@
           :display block
           
           .move_icon
-            :visibility hidden
+            left: -10000px
+            position: absolute
+
+            &:focus
+              left: inherit
 
       &.assignment-hover, .ui-sortable-helper 
         :background-color #eee
@@ -136,7 +140,7 @@
           :display block
         
         div.data.move .move_icon
-          :visibility visible
+          left: inherit
         
       &.editing
         :background-color #ddd  
