--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -19,6 +19,7 @@
   <% end %>
 <% end %>
 
+<% js_env :folder_id => @user.profile_pics_folder.id %>
 <% js_bundle :profile %>
 <% jammit_css :profile_edit %>
 
@@ -546,7 +547,6 @@ TEXT
   <a href="#" class="add_pic_link add"><%= t('links.upload_new_image', "Upload a new Image") %></a>
   <% form_for :attachment, :url => context_url(@user, :context_files_url, :format => 'json'), :html => {:id => "add_pic_form", :style => "display: none;"} do |f| %>
     <input type="hidden" name="format" value="text" />
-    <%= f.hidden_field :folder_id, :value => @user.profile_pics_folder.id %>
     <%= f.file_field :uploaded_data %>
     <button type="submit" class="button small-button"><%= t('buttons.add_picture_file', "Add File") %></button>
   <% end %>
