don't allow too-long calendar event names when editing, fixes #9444
Change-Id: I28c2ce3b4243862b0d5589ba2563a95a71cdb1a1
Reviewed-on: https://gerrit.instructure.com/13713
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Joe Tanner <joe@instructure.com>

--- a/app/views/jst/calendar/editCalendarEventFull.handlebars
+++ b/app/views/jst/calendar/editCalendarEventFull.handlebars
@@ -1,5 +1,5 @@
 <form id="editCalendarEventFull" class="{{#if use_section_dates}}use_section_dates{{/if}}">
-  <input class="title" name="title" placeholder="{{#t "event_title"}}Event Title{{/t}}"value="{{title}}"/>
+  <input class="title" name="title" placeholder="{{#t "event_title"}}Event Title{{/t}}" value="{{title}}" maxlength="255"/>
 
   <textarea name="description">{{description}}</textarea>
 
