log account with LDAP errors, and show it in error_reports
test plan:
 * set up an LDAP config with invalid filter syntax
 * try to log in with a user that exists
 * go to /error_reports; you should see the error, report, and it
   should have a link to the account

Change-Id: I2d89befbfeb4672fc6fdcb5653b16bd5f04fd795
Reviewed-on: https://gerrit.instructure.com/13761
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Brian Palmer <brianp@instructure.com>

--- a/app/views/errors/index.html.erb
+++ b/app/views/errors/index.html.erb
@@ -34,6 +34,9 @@
     </h3>
 
     <div style="border: 1px solid #eee; -moz-border-radius: 5px; padding: 5px 20px;">
+      <% if report.account_id %>
+        <%= before_label :account, "account" %> <%= link_to report.account.try(:name), account_url(report.account_id) %><br />
+      <% end %>
       <%= before_label :category, "category" %> <%= report.category || t(:default_category, 'default') %><br/>
       <%= before_label :created_at, "created at" %> <%= report.created_at %><br />
       <% if report.user_id %>
