Add better accessibility for quiz settings
fixes #10557

This fixes a flow issue when navigating
checkbox items. It also adds and
standardizes labels.

Test Plan:
  1. Navigate to the edit quiz page
  2. Navigate the "Quiz Settings" sidebar
     with a screen reader.
  3. Check a few checkboxes and ensure you
     can navigate and check their sub-checkboxes
  4. See that labels are named appropriatly for
     each input field type.

Change-Id: Ia9c33bcad207f3a561649a954c75d4e6e290fc10
Reviewed-on: https://gerrit.instructure.com/13792
Reviewed-by: Joe Tanner <joe@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -150,7 +150,7 @@
     <% end %>
     <div id="main">
       <div id="right-side-wrapper">
-        <aside id="right-side" role="complementary" aria-label="sidebar">
+        <aside id="right-side" role="complementary">
           <%= right_side %>
         </aside>
       </div>
