add user comments to error report, if present
fixes #bracken

Change-Id: I8f932ca5b9d170f1cbeade45bbf79d5bb2d50127
Reviewed-on: https://gerrit.instructure.com/13818
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Simon Williams <simon@instructure.com>

--- a/app/views/errors/index.html.erb
+++ b/app/views/errors/index.html.erb
@@ -46,6 +46,9 @@
       <% if report.request_context_id %>
         <%= before_label :request_context_id, "request context id" %> <%= report.request_context_id %>
       <% end %>
+      <% if report.comments %>
+        <%= before_label :comments, "comments" %> <%= report.comments %><br/>
+      <% end %>
       <% (report.data || {}).to_a.sort.each do |k,v| %>
         <% next if k.to_s == "exception_message" %>
         <br><%= before_label k.to_s %> <%= v %>
