add course name and short course name data validation on course settings
fixes #10842

test plan:
  1. login as a teacher
  2. go to a course
  3. click 'Settings' on the left hand nav at the bottom
  4. click the 'Course Details' tab
  5. click 'Edit Course Details' at the bottom
  6. try to add more than 255 characters to course name
  7. try to add more than 255 characters to short name

Change-Id: I7bb3ccc35bf1db743e728cc38b2dc7d6f650fe73
Reviewed-on: https://gerrit.instructure.com/13895
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Cody Cutrer <cody@instructure.com>

--- a/app/views/courses/settings.html.erb
+++ b/app/views/courses/settings.html.erb
@@ -44,7 +44,7 @@
         <td><%= f.blabel :name, :course_name, :en => "Name" %></td>
         <td class="nobr">
           <% if can_rename_course %>
-            <%= f.text_field :name, :class => "course_form", :style => "width: 150px;" %>
+            <%= f.text_field :name, :class => "course_form", :maxlength => '255', :style => "width: 150px;" %>
           <% else %>
             <span class="course_form name"><%= @context.name %></span>
           <% end %>
@@ -66,7 +66,7 @@
         <td class="nobr"><%= f.blabel :course_code, :en => "Course Code" %></td>
         <td class="nobr">
           <% if can_rename_course %>
-            <span class="course_form"><%= f.text_field :course_code, :style => "width: 100px;" %></span>
+            <span class="course_form"><%= f.text_field :course_code, :maxlength => '255', :style => "width: 100px;" %></span>
           <% else %>
             <span class="course_form course_code"><%= @context.course_code %></span>
           <% end %>
