disable collections in wiki sidebar, fixes #9433
don't show collections in wiki sidebar until feature is ready

test plan:
1. create a default collection (via api or console)
2. go to a page with the wiki sidebar
3. collections should not appear

Change-Id: I73bc17a61530b8097c96bf47d55d47781217e209
Reviewed-on: https://gerrit.instructure.com/13898
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Cameron Matheson <cameron@instructure.com>

--- a/app/views/shared/_wiki_sidebar.html.erb
+++ b/app/views/shared/_wiki_sidebar.html.erb
@@ -1,6 +1,6 @@
 <% @context ||= @current_user %>
 <% cache(['wiki_sidebar_render_', @context.cache_key, @current_user].cache_key.to_s) do %>
-<% collections = @current_user && @current_user.collections.all %>
+<% collections = [] #@current_user && @current_user.collections.all %>
 <% load_wiki_sidebar %>
 <div id="editor_tabs" style="display: none;">
 
